start factor and pre factor

--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -121,11 +121,7 @@ app.request.attributes.get('_route_params')) %}
                                     </a>
                                 </li>
                                 <li aria-haspopup="true" class="menu-dropdown mega-menu-dropdown  mega-menu-full">
-                                    <a href="/"> پیش فاکتور
-                                    </a>
-                                </li>
-                                <li aria-haspopup="true" class="menu-dropdown classic-menu-dropdown ">
-                                    <a href="javascript:;"> پیش فاکتور
+                                    <a href="/preContracts"> پیش فاکتور
                                     </a>
                                 </li>
                             </ul>
