--- a/app/Resources/views/page/showContract.html.twig
+++ b/app/Resources/views/page/showContract.html.twig
@@ -75,7 +75,7 @@
     </div>
     <!-- END CONTENT -->
         <script>
-            function callpreFactore(id) {
+            function callFactore(id) {
                 $.ajax({
                     url: "/api/preFactor/"+id,
                     type: "GET",
