--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -110,12 +110,10 @@ app.request.attributes.get('_route_params')) %}
                                     <a href="/contracts"> لیست قرار دادها
                                     </a>
                                 </li>
-                                {% if is_granted("ROLE_SECRETARY") or is_granted('ROLE_ADMIN') %}
                                 <li  aria-haspopup="true" class="menu-dropdown mega-menu-dropdown  {% if '/items'==currentPath %} active{% endif %}">
                                     <a href="/items"> لیست مرسولات
                                     </a>
                                 </li>
-                                {% endif %}
                                 <li aria-haspopup="true" class="menu-dropdown classic-menu-dropdown {% if 'statistics' in currentPath %} active{% endif %}">
                                     <a href="/statistics">ثبت آمار
                                     </a>
@@ -181,6 +179,7 @@ app.request.attributes.get('_route_params')) %}
 
 <script src="{{ asset('assets/global/plugins/jquery.min.js')}}" type="text/javascript"></script>
 <script src="{{ asset('assets/global/plugins/jquery-ui.js')}}" type="text/javascript"></script>
+<script src="{{ asset('assets/global/plugins/jquery.cookie.js')}}" type="text/javascript"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="{{ asset('assets/global/plugins/bootstrap/js/bootstrap.min.js')}}" type="text/javascript"></script>
 <script src="{{ asset('assets/global/plugins/js.cookie.min.js')}}" type="text/javascript"></script>
