--- a/app/Resources/views/report/preFactor.html.twig
+++ b/app/Resources/views/report/preFactor.html.twig
@@ -30,7 +30,7 @@
             margin-left:80px;
         }
         .pdf-title span{
-            font-size: 30px;
+            font-size: 33px;
         }
         .main-table >tbody>tr>td{
             border:1px solid #000;
@@ -67,15 +67,15 @@
             display: block;
         }
         .table1-header span:first-child{
-            font-size: 20px;
+            font-size: 23px;
         }
         .table1-header span:last-child{
-            font-size: 30px;
+            font-size: 33px;
             font-weight: bold;
         }
         .c-table{
             border:1px solid #000;
-            font-size: 18px;
+            font-size: 21px;
             width: 90%;
             margin: 0 auto;
             margin-bottom:5px;
@@ -84,7 +84,7 @@
             padding: 0px 10px;
         }
         .td-border{
-            font-size: 20px;
+            font-size: 23px;
             font-weight: bold;
             border-bottom: 1px solid #000;
             border-left: 1px solid #000;
@@ -94,7 +94,7 @@
         }
         .table3 th{
             border-bottom: 1px solid #000;
-            font-size: 23px;
+            font-size: 26px;
         }
         .label-checkbox{
             vertical-align: middle;
@@ -115,7 +115,7 @@
             position: absolute;
             top: -2px;
             left:2px;
-            font-size: 17px;
+            font-size: 20px;
             line-height: 1;
             color: #000;
         }
@@ -136,7 +136,7 @@
         }
         .cost{
             font-weight: bold;
-            font-size: 25px;
+            font-size: 28px;
         }
 
     </style>
@@ -160,8 +160,8 @@
             </table>
             <table class="table1">
                 <tr>
-                    <td class="text-center table1-header" colspan="3" style="font-size: 25px">
-                        <span style="font-size: 20px">به نام خدا</span><br>
+                    <td class="text-center table1-header" colspan="3" style="font-size: 28px">
+                        <span style="font-size: 23px">به نام خدا</span><br>
                         <span><strong>پیش فاکتور فروش خدمات اطلاع رسانی</strong></span>
                     </td>
                 </tr>
@@ -218,7 +218,8 @@
                     <td colspan="3">
                         <table style="margin-top:30px;padding-bottom: 10px">
                             <tr>
-                                <td style="font-size: 17px">آدرس : تهران ، خیابان بهشتی ، خیابان قائم مقام فراهانی ، جنب بیمارستان تهران کلینیک ، کوچه آزادگان ، پلاک ۲۴ ، طبقه ۴</td>
+                                <td style="font-size: 20px">آدرس : تهران ، خیابان بهشتی ، خیابان قائم مقام فراهانی ، جنب بیمارستان تهران کلینیک ، کوچه آزادگان ، پلاک ۲۴ ، طبقه
+                                    ۴</td>
                             </tr>
                         </table>
                     </td>
@@ -341,7 +342,7 @@
             <table class="full-with">
                 <tr>
                     <td>
-                            <span style="font-weight: bold;font-size: 25px">
+                            <span style="font-weight: bold;font-size: 28px">
                                 صورتحساب پرداخت :
                             </span>
                     </td>
@@ -422,7 +423,7 @@
                                 <td class="text-center no-border"></td>
                                 <td class="text-center no-border"></td>
                                 <!--inja ye td kamtar dare va td paeeini colspan 2 havaset bashe-->
-                                <td class="text-center" colspan="2" style="font-size: 15px"><strong>جمع مبلغ</strong></td>
+                                <td class="text-center" colspan="2" style="font-size: 18px"><strong>جمع مبلغ</strong></td>
                                 <td class="text-center"><strong>{{ contract.basePrice|numberFormat }} تومان</strong></td>
                             </tr>
                             <tr>
@@ -431,14 +432,14 @@
                                 <td class="text-center no-border"></td>
                                 <!--inja ye td kamtar dare va td paeeini colspan 2 havaset bashe-->
                                 <td class="text-center " colspan="2">تخفیف</td>
-                                <td class="text-center" style="font-size: 20px">{{ contract.discount|numberFormat }} تومان</td>
+                                <td class="text-center" style="font-size: 23px">{{ contract.discount|numberFormat }} تومان</td>
                             </tr>
                             <tr>
                                 <td class="text-center no-border"></td>
                                 <td class="text-center no-border"></td>
                                 <td class="text-center no-border"></td>
                                 <!--inja ye td kamtar dare va td paeeini colspan 2 havaset bashe-->
-                                <td class="text-center cost" colspan="2" style="font-size: 20px">مبلغ قابل پرداخت</td>
+                                <td class="text-center cost" colspan="2" style="font-size: 23px">مبلغ قابل پرداخت</td>
                                 <td class="text-center cost">{{ contract.contractPrice|numberFormat }} تومان</td>
                             </tr>
                         </table>
@@ -447,14 +448,14 @@
             </table>
             <table class="signature" style="margin-top:30px;margin-bottom:50px">
                 <tr>
-                    <td style="font-weight: bold;font-size: 20px">مشخصات پرداخت وجه اشتراک : </td>
+                    <td style="font-weight: bold;font-size: 23px">مشخصات پرداخت وجه اشتراک : </td>
                 </tr>
                 <tr>
-                    <td style="font-weight: bold;font-size: 20px">
+                    <td style="font-weight: bold;font-size: 23px">
                         <span>                        جاری بانک ملت به شماره حساب۱۴۶۵۷۱۶۱/۴۴
 </span>
                          </td>
-                    <td style="text-align: center;font-weight: bold;font-size: 20px"> مهر و امضاء فروشنده خدمات </td>
+                    <td style="text-align: center;font-weight: bold;font-size: 23px"> مهر و امضاء فروشنده خدمات </td>
                 </tr>
                 <tr style="margin-bottom: 40px">
                     <td style="font-weight: bold;font-size: 20px">و يا شماره كارت ۶۱۰۴۳۳۷۹۵۳۹۰۰۵۵۰ به نام امين اسفندياري</td>
