--- a/app/Resources/views/common/register.html.twig
+++ b/app/Resources/views/common/register.html.twig
@@ -18,6 +18,8 @@
                 مشکل زیر رخ داده است:
                 {{ form_errors(form.email) }}
                 {{ form_errors(form.username) }}
+                {{ form_errors(form.gender) }}
+                {{ form_errors(form.phone) }}
                 {{ form_errors(form.password) }}
             </div>
         </div>
@@ -28,6 +30,17 @@
                 <label class="control-label visible-ie8 visible-ie9">Full Name</label>
                 {{ form_widget(form.username,{'attr':{'class':'form-control placeholder-no-fix','placeholder':'نام کاربری-الزامی','size':"40"}}) }}
             </div>
+                <div class="form-group">
+                    <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+                    <label class="control-label ">جنسیت:</label>
+                    {{ form_widget(form.gender,{'attr':{'class':'form-control'}}) }}
+                </div>
+
+                <div class="form-group">
+                    <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+                    <label class="control-label visible-ie8 visible-ie9">تلفن</label>
+                    {{ form_widget(form.phone,{'attr':{'class':'form-control placeholder-no-fix','placeholder':'تلفن-الزامی','size':"40"}}) }}
+                </div>
                 <div class="form-group">
                     <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
                     <label class="control-label visible-ie8 visible-ie9">Email</label>
