--- a/app/Resources/views/report/preFactor.html.twig
+++ b/app/Resources/views/report/preFactor.html.twig
@@ -312,7 +312,7 @@
                                 <td>
                                     <span style="font-weight: bold;margin-left:10px;">مدت زمان اشتراک: </span>
                                     <span>
-                                            {{contract.contractTime=='6Month'?'۶ ماه':'۱۲ ماه' }} از {{(contract.contractStartDate) ?contract.contractStartDate|jDatePdf:'' }} الی{{ (contract.contractEndDate)?contract.contractEndDate|jDatePdf :''}}
+                                            {{contract.contractTime=='6month'?'۶ ماه':'۱۲ ماه' }} از {{(contract.contractStartDate) ?contract.contractStartDate|jDatePdf:'' }} الی{{ (contract.contractEndDate)?contract.contractEndDate|jDatePdf :''}}
                                         </span>
                                     <span style="font-weight: bold;margin-left:10px;margin-right:50px">محدوده اطلاع رسانی : </span>
                                     {% if contract.separate %}
@@ -367,7 +367,7 @@
                                     {{ contract.shareString }}
                                  </td>
                                 <td class="text-center">۱</td>
-                                <td class="text-center">{{contract.contractTime=='6Month'?'۶ ماه':'۱۲ ماه' }}</td>
+                                <td class="text-center">{{contract.contractTime=='6month'?'۶ ماه':'۱۲ ماه' }}</td>
                                 <td class="text-center">{{ contract.servicePrice|numberFormat }}تومان</td>
                             </tr>
                             {% set numberIndex=1 %}
@@ -386,7 +386,7 @@
 
                                 <td class="text-center">{{ contract.shareString }}</td>
                                 <td class="text-center">۱</td>
-                                <td class="text-center">{{contract.contractTime=='6Month'?'۶ ماه':'۱۲ ماه' }}</td>
+                                <td class="text-center">{{contract.contractTime=='6month'?'۶ ماه':'۱۲ ماه' }}</td>
                                 <td class="text-center">
                                     {% if contract.contractTime=='6month' %}
                                         {% if service.name=='تلگرام' %}
